--- a/example/index.html
+++ b/example/index.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-    <meta charset="UTF-8">
-    <title>跨游览器的颜色选择器</title>
+    <meta charset="utf-8"/>
+    <link rel="stylesheet" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../dist/css/colorPicker.css">
+    <script src="../dist/js/colorPicker.js"></script>
+    <script>
+        window.onload = function(){
+            new ColorPicker({
+                textInput_id: "user_color"
+            });
+        };
+    </script>
 </head>
 <body>
-
+    <div class="container">
+        <div class="row">
+            <div class="col-md-6">
+                <form class="form-horizontal">
+                    <div class="form-group">
+                        <label for="user_color" class="col-sm-2 control-label">颜色</label>
+                        <div class="col-sm-10">
+                            <input type="text" class="form-control" name="user_color" id="user_color" placeholder="点击选择颜色">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="user_password" class="col-sm-2 control-label">密码</label>
+                        <div class="col-sm-10">
+                            <input type="password" class="form-control" name="user_password" id="user_password" placeholder="输入密码">
+                        </div>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+    <br/>
 </body>
 </html>
